<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Tela"
    android:id="@+id/layoutMain"
    android:orientation="vertical" >
    
    <View style="@style/Divider" />

    <TextView
        android:id="@+id/txNomeRestaurante"
        style="@style/TextoNomeRestaurante"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:text="@string/strHello" />

   <ImageView
       android:id="@+id/imageView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:padding="0px"
       android:layout_gravity="center_horizontal"
       android:layout_alignParentLeft="true"
       android:src="@drawable/qmenu" />

    <View style="@style/Divider" android:layout_marginTop="10dip"/>
    
    <TextView
        android:id="@+id/txCabec"
        style="@style/TextoCabec"
        android:layout_gravity="center_horizontal"
        android:text="@string/strMsgInicio" />

    <View style="@style/Divider" android:layout_marginBottom="30dip"/>
    
    <Button
        android:id="@+id/btEstab"
        style="@style/ButtonB"        
        android:text="@string/strBtEstabelecimento" />
    
    <Button
        android:id="@+id/btDemo"
        style="@style/ButtonB"
        android:layout_marginTop="15dip"
        android:text="@string/strBtDemo" />

    <Button
        android:id="@+id/btCadastroEstab"
        style="@style/ButtonB"
        android:layout_marginTop="15dip"
        android:visibility="gone" 
        android:text="@string/strBtCadastroEstab" />
    
    <Button
        android:id="@+id/btNoLocal"
        style="@style/ButtonB"
        android:layout_marginTop="15dip"
        android:text="@string/strNoLocal"
        android:visibility="gone" />
	
    <Button
        android:id="@+id/btDelivery"
        style="@style/ButtonB"
        android:layout_marginTop="15dip"
        android:text="@string/strBtDelivery"
        android:visibility="gone" />
	
    <Button
        android:id="@+id/btLogin"
        android:layout_marginTop="40dip"
        style="@style/ButtonB"
        android:text="@string/strBtLogin" />
	
    <TextView
        android:id="@+id/txRodapeLogin"
        style="@style/TextoNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/strMainRodapeLogin" />
    
    <TextView
        android:id="@+id/txUsuarioLogado"
        android:layout_marginTop="40dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        style="@style/TextoNormal"
        android:visibility="invisible" />
    
    <Button
        android:id="@+id/btLogout"
        style="@style/ButtonB"
        android:text="@string/strBtLogout"
        android:visibility="invisible" />

</LinearLayout>