<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Tela"
    android:orientation="vertical" >
    
    <include layout="@layout/titulo"/>

    <TextView
        android:id="@+id/textView1"
        style="@style/TextoCabec"
        android:text="@string/strMsgLogin" />
    
    <View style="@style/Divider" />

    <TextView
        android:layout_marginTop="30dip"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strLbLogin" />

    <EditText
        android:id="@+id/edLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strLbSenha" />

    <EditText
        android:id="@+id/edSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:singleLine="true" />
    
    <Button
        android:id="@+id/btEntrar"
        style="@style/ButtonB"
        android:text="@string/strBtEntrar" />

    <CheckBox
        android:id="@+id/chGravarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/strChGravarLogin" />
    
    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\n\n\n" />
    


</LinearLayout>