<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#FFFFFF"
    tools:context=".Main" >

    <Button
        android:id="@+id/btVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/strBtVoltar" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strMsgNoLocal" />

    <ListView
        android:id="@+id/listWIFI"
        style="@style/List"
        android:layout_width="match_parent"
        android:layout_height="130dp" >

    </ListView>

    <Button
        android:id="@+id/btBuscaGPS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strBtLocalizacao" />

    <Button
        android:id="@+id/btBuscaCidadeNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strBtBuscaCidade" />

</LinearLayout>