<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:padding="10dp"
    tools:context=".ListaEstabCidadeNome" >

    <Button
        android:id="@+id/btVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/strBtVoltar" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strLdBuscaCidade" />

    <EditText
        android:id="@+id/edBuscaCidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionDone"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strLdBuscaNome" />

    <EditText
        android:id="@+id/edBuscaNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionDone"
        android:singleLine="true" />

    <TextView
        android:id="@+id/txSelEstab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strSelEstab"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/android:list"
        style="@style/List"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>