<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Tela"
    android:orientation="vertical" >

    <include layout="@layout/titulo" />

    <TextView
        android:id="@+id/txBoasVindas"
        style="@style/TextoCabec"
        android:text="@string/strMsgSelItem" />

    <View style="@style/Divider" />

    <ListView
        android:id="@+id/android:list"
        style="@style/List"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/btListaPedido"
            style="@style/ButtonB"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/strBtListaPedido" />

        <Button
            android:id="@+id/btFecharMesa"
            style="@style/ButtonB"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/strBtFecharMesa" />
    </LinearLayout>

</LinearLayout>