<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Tela"
    android:orientation="vertical" >

    <include layout="@layout/titulo" />

    <ListView
        android:id="@+id/android:list"
        style="@style/List"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <View style="@style/Divider" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txMesa"
            style="@style/TextoNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="" />

        <TextView
            android:id="@+id/txTotal"
            style="@style/TextoNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="" />
    </RelativeLayout>

    <View style="@style/Divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >
        

        <Button
            android:layout_weight="1.3"
            android:id="@+id/btConfPedido"
            style="@style/ButtonB"
            android:layout_gravity="center"
            android:text="@string/strBtConfPedido"
            android:visibility="invisible" />
        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/Button"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:background="@android:color/transparent"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rbUltimo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:text="@string/strUltimos"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/rbTodos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/strTodos"
                android:textColor="#000000" />
        </RadioGroup>


    </LinearLayout>
</LinearLayout>